--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,11 +1,16 @@
 body{
-    width: 940px;
+   
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     color: #333333;
 }
+.container{
+    width: 940px;
+    margin: 0 auto;
+}
+/*============================================================================*/
 h1{
     background-image: url(../img/sobre-background.jpg);
     padding: 10px;
@@ -35,6 +40,19 @@ figcaption{
     margin-right: auto;
     width: 550px;
 }
+p::first-letter{
+    font-weight: 700;
+    
+}
+h1 +p{
+    text-indent: 40px;
+}
+p::first-line{
+    font-variant: small-caps;
+}
+:not(p) + p::first-line{
+    font-variant: small-caps;
+}
 p{
     width: 60%;
     height: auto;
@@ -42,18 +60,44 @@ p{
     margin: 5px auto;
     margin-left: 10px;
     padding: 0 45px;
-    text-indent: 15px;
-   
-    
+    text-indent: 15px;  
     
 }
-#rodape{
-    color: #777;
-    margin: 25px 0;
-    padding: 25px 0;
+/*=============================================================================*/
+footer{
+    background-image: url(../img/fundo-rodape.png);
+    clear: both;
+    padding: 20px 0;
+    width: 100%;
+    height: 50px;
+
 }
-#rodape img {
-    margin-right: 25px;
-    vertical-align: middle;
-    width: 94px;
+footer .container{
+    position: relative;
+}
+.social{
+    position: absolute;
+    display: inline-block;
+    right: 0;
+}
+.social li{
+    float: left;
+    margin-left: 25px;
+}
+.social a{
+    height: 32px;
+    width: 32px;
+    display: block;
+    text-indent: -99999px;
+
+}
+.social a[href*="facebook.com"]{
+    background-image: url(../img/facebook.png);
+
+}
+.social a[href*="twitter.com"]{
+    background-image: url(../img/twitter.png);
+}
+.social a[href*="plus.google.com"]{
+    background-image: url(../img/googleplus.png);
 }
